--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -186,11 +186,12 @@ hr.small {
     width: 100%;
     height: 400px;
     color: #fff;
-    background: url(../img/callout.jpg) no-repeat center center scroll;
+    background: url(../img/bg.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    text-shadow: 2px 1px 2px rgba(150, 150, 150, 1);
 }
 
 /* Portfolio */
