--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -147,7 +147,7 @@ footer {
 .navbar-inverse { border-color: #FFFFFF}
 .navbar-inverse .navbar-brand { color: #000000;font-size:28px}
 .navbar-inverse .navbar-brand:hover { color: #337ab7}
-.navbar-inverse .navbar-nav>li>a { color: #999999;margin-left:5px}
+.navbar-inverse .navbar-nav>li>a { color: #999999;margin-left:5px;font-size:16px}
 .navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:focus { color: #999999}
 .navbar-inverse .navbar-nav>.active>a,.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus { color: #999999}
 .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus { color: #999999}
